# Rust-PDF-Generation-Server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: handlers.rs  helpers.rs  main.rs  test_data.rs
src/types/: currency_code.rs  currency_value.rs  mod.rs  parameters.rs  pdf_invoice_line.rs  tax_data.rs
src/types/credit_note/: comment.rs  credit.rs  mod.rs  parameters.rs
src/types/invoice/: invoice_line.rs  mod.rs  parameters.rs  tax_data.rs
templates/: credit-note-template.stpl  invoice-template.stpl
test_data/: credit-note-test-data.json  invoice-test-data.json
