[package]
name = "rust-html-pdf-generator"
version = "0.1.0"
authors = ["Brendan Dagys <brendandagys@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sailfish = "0.4.0"
wkhtmltopdf = "0.4.0"
